--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <script>
-        const wsUrl = 'ws://localhost:9912/ws';
+        const wsUrl = 'ws://216.86.169.9:9912/ws';
 
         let localStream = null;
         let remoteStream = null;
